# SwayOSD

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  meson.build  rust-toolchain.toml  rustfmt.toml
.github/workflows/: fedora-build.yml  fedora-copr.yml  rust-format.yml  rust.yml
build-scripts/: swayosd-git.rpkg.spec  swayosd.rpkg.spec
data/: meson.build  swayosd.gresource.xml
data/completions/fish/: swayosd-client.fish  swayosd-server.fish
data/config/: backend.toml  config.toml
data/polkit/actions/: org.erikreider.swayosd.policy.in
data/polkit/rules/: org.erikreider.swayosd.rules
data/services/systemd/: swayosd-libinput-backend.service.in
data/style/: style.css  style.scss
install/usr/lib/systemd/user/: swayosd-libinput-backend.service
install/usr/local/share/dbus-1/services/: org.erikreider.swayosd.service
install/usr/local/share/dbus-1/system.d/: org.erikreider.swayosd.conf
install/usr/local/share/polkit-1/actions/: org.erikreider.swayosd.policy
src/: application.rs  argflags.rs  args.rs  argtypes.rs  config.rs  global_utils.rs  main.rs  meson.build  osd_window.rs  progressbar.rs  utils.rs
src/actions/: mod.rs  mpris.rs  pulse.rs
src/actions/brightness_backend/: brightnessctl.rs  mod.rs
src/audio_backend/: mod.rs  pulsectl.rs  wireplumber.rs
src/brightness_backend/: blight.rs  blight_backend.rs  brightnessctl.rs  ddcci.rs  mod.rs
src/client/: client.rs  main.rs
src/config/: backend.rs  user.rs
src/input-backend/: dbus_server.rs  main.rs
src/mpris-backend/: mod.rs
src/server/: application.rs  login1.rs  main.rs  osd_window.rs  pulse.rs  upower.rs  utils.rs
src/server/widgets/: mod.rs
src/server/widgets/segmented_progress_widget/: imp.rs  mod.rs  progress.rs
