[package]
name = "swayosd"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "swayosd-server"
path = "src/server/main.rs"

[[bin]]
name = "swayosd-client"
path = "src/client/main.rs"

[[bin]]
name = "swayosd-libinput-backend"
path = "src/input-backend/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
# Config dependencies
toml = "0.8"
serde = "1"
serde_derive = "1"
# GUI Dependencies
gtk = { package = "gtk4", version = "0.10.0" }
gtk-layer-shell = { package = "gtk4-layer-shell", version = "0.6.3" }
shrinkwraprs = "0.3.0"
cascade = "1.0.1"
pulse = { version = "2.30.1", package = "libpulse-binding" }
pulsectl-rs = "0.3.2"
substring = "1.4.5"
lazy_static = "1.5.0"
zbus = "5"
# Backend Dependencies
input = "0.9"
libc = "0.2.174"
evdev-rs = "0.6.2"
async-std = "1.13.1"
nix = { version = "0.30", features = ["poll"] }
blight = "0.7.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
async-channel = "2.5.0"
mpris = "2.0.1"
runtime-format = "0.1.3"
strfmt = "0.2.4"
clap = { version = "4.5.53", features = ["derive"] }
ddc = "0.3.0"
ddc-hi = "0.4.1"
